# doc-engineer

./: .coverage  .env.example  .flake8  .gitignore  README.md  doc_engineer.py  example.py  generated_document.md  mock_example.py  mypy.ini  pyproject.toml  requirements.txt  run_lint.sh  run_tests.sh  setup.sh  simple_example.py
.github/workflows/: lint.yml  tests.yml
core/: __init__.py  ai.py  content_generator.py  document_generator.py  document_planner.py
core/citations/: citation_extractor.py  citation_manager.py
core/formatting/: template_handler.py  templates.py
core/generation/: ai.py  content_generator.py
core/modules/: __init__.py  citation_manager.py  content_generator.py  document_parser.py  output_formatter.py  template_handler.py  templates.py
core/orchestration/: document_generator.py
core/planning/: document_parser.py  document_planner.py
core/search/: citation_extractor.py  search_manager.py
templates/: academic.json  report.json
tests/: __init__.py  test_cli.py  test_content_generator.py  test_document_generator.py
