[tool.poetry]
name = "doc-engineer"
version = "0.1.0"
description = "A powerful single-shot document generation system"
authors = ["mudiko <basaran.m.mert@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.4"
python-dotenv = "^1.0.0"
llama-index-readers-semanticscholar = "^0.1.3"
llama-index-core = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[tool.poetry.group.formatting.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
doc-engineer = "doc_engineer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
